--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -2,6 +2,9 @@ name: Release Drafter
 
 on:
   push:
+    tags:
+      - "v*"
+
     # branches to consider in the event; optional, defaults to all
     branches:
       - main
