🐛 fix(Create_Release_And_Publish.yml): change asset_path to include hyphen instead of concatenating string The asset_path was previously concatenating the string with the version number, which could cause issues with the file name. The hyphen is now used to separate the string and the version number to ensure that the file name is valid.

--- a/.github/workflows/Create_Release_And_Publish.yml
+++ b/.github/workflows/Create_Release_And_Publish.yml
@@ -87,7 +87,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./publish${{ env.GitVersion_SemVer }}.zip
+          asset_path: ./publish-${{ env.GitVersion_SemVer }}.zip
           asset_name: publish-${{ env.GitVersion_SemVer }}.zip
           asset_content_type: application/zip
 
