--- a/.github/workflows/Create_Release_And_Publish.yml
+++ b/.github/workflows/Create_Release_And_Publish.yml
@@ -2,15 +2,15 @@ name: Create release and publish
 
 on:
   workflow_dispatch:
+    inputs:
+      branch:
+        description: "Target branch"
+        required: true
+        default: "main"
 
 jobs:
   build:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        architecture: [arm64, arm32, amd64]
-
+    runs-on: ubuntu-latest
     env:
       REF_NAME: ${{ github.ref_name }}
 
@@ -42,16 +42,8 @@ jobs:
 
       - name: Install dependencies
         run: |
-          if [[ "${{ matrix.os }}" == "ubuntu-latest" ]]; then
-            sudo apt-get update && sudo apt-get -y upgrade
-            sudo apt-get install -yq git curl build-essential
-          elif [[ "${{ matrix.os }}" == "windows-latest" ]]; then
-            choco install git curl -y
-          elif [[ "${{ matrix.os }}" == "macos-latest" ]]; then
-            # Install required dependencies for macOS
-            # Add commands specific to macOS environment
-            echo "macOS setup"
-          fi
+          sudo apt-get update && sudo apt-get -y upgrade
+          sudo apt-get install -yq git curl build-essential
 
       - name: Build project
         run: |
@@ -75,22 +67,22 @@ jobs:
       - name: Zip publish directory
         run: |
           cd publish
-          zip -r ../streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.zip .
+          zip -r ../streammaster-${{ env.GitVersion_SemVer }}.zip .
 
-      - name: Generate SHA256 hash for Zip archive
+      - name: Generate SHA256 hash for zip
         run: |
           cd publish
-          sha256sum ../streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.zip > ../streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.zip.sha256
+          sha256sum ../streammaster-${{ env.GitVersion_SemVer }}.zip > ../streammaster-${{ env.GitVersion_SemVer }}.zip.sha256
+
+      - name: Generate SHA256 hash for tar.gz
+        run: |
+          cd publish
+          sha256sum ../streammaster-${{ env.GitVersion_SemVer }}.tar.gz > ../streammaster-${{ env.GitVersion_SemVer }}.tar.gz.sha256
 
       - name: Tar publish directory
         run: |
           cd publish
-          tar -czvf ../streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.tar.gz .
-
-      - name: Generate SHA256 hash for Tar archive
-        run: |
-          cd publish
-          sha256sum ../streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.zip > ../streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.tar.gz.sha256
+          tar -czvf ../streammaster-${{ env.GitVersion_SemVer }}.tar.gz .
 
       - name: Create Release
         id: create_release
@@ -102,6 +94,7 @@ jobs:
           release_name: v${{ env.GitVersion_SemVer }}
           draft: false
           prerelease: false
+
       - name: Upload Release Asset (zip)
         id: upload-release-asset-zip
         uses: actions/upload-release-asset@v1
@@ -109,8 +102,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.zip
-          asset_name: streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.zip
+          asset_path: ./streammaster${{ env.GitVersion_SemVer }}.zip
+          asset_name: streammaster-${{ env.GitVersion_SemVer }}.zip
           asset_content_type: application/zip
 
       - name: Upload SHA256 hash for zip
@@ -120,8 +113,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.zip.sha256
-          asset_name: streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.zip.sha256
+          asset_path: ./streammaster-${{ env.GitVersion_SemVer }}.zip.sha256
+          asset_name: streammaster-${{ env.GitVersion_SemVer }}.zip.sha256
           asset_content_type: text/plain
 
       - name: Upload Release Asset (tar.gz)
@@ -131,8 +124,8 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.tar.gz
-          asset_name: streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.tar.gz
+          asset_path: ./streammaster-${{ env.GitVersion_SemVer }}.tar.gz
+          asset_name: streammaster-${{ env.GitVersion_SemVer }}.tar.gz
           asset_content_type: application/gzip
 
       - name: Upload SHA256 hash for tar.gz
@@ -142,6 +135,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.tar.gz.sha256
-          asset_name: streammaster-${{ env.GitVersion_SemVer }}-${{ matrix.os }}-${{ matrix.architecture }}.tar.gz.sha256
+          asset_path: ./streammaster-${{ env.GitVersion_SemVer }}.tar.gz.sha256
+          asset_name: streammaster-${{ env.GitVersion_SemVer }}.tar.gz.sha256
           asset_content_type: text/plain
