🚀 chore(Create_Release_And_Publish.yml): add upload of Dockerfile and docker-compose.yml to release assets This commit adds the upload of Dockerfile and docker-compose.yml to the release assets. This is done to make it easier for users to deploy the application using Docker.

--- a/.github/workflows/Create_Release_And_Publish.yml
+++ b/.github/workflows/Create_Release_And_Publish.yml
@@ -133,3 +133,25 @@ jobs:
           asset_path: ./streammaster-${{ env.GitVersion_SemVer }}.tar.gz.sha256
           asset_name: streammaster-${{ env.GitVersion_SemVer }}.tar.gz.sha256
           asset_content_type: text/plain
+
+      - name: Upload Dockerfile
+        id: Dockerfile
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./Dockerfile
+          asset_name: Dockerfile
+          asset_content_type: text/plain
+
+      - name: Upload docker-compose.yml
+        id: docker-compose
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./docker-compose.yml
+          asset_name: docker-compose.yml
+          asset_content_type: text/plain
