--- a/.github/workflows/Create_Release_And_Publish.yml
+++ b/.github/workflows/Create_Release_And_Publish.yml
@@ -97,7 +97,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./streammaster${{ env.GitVersion_SemVer }}.zip
+          asset_path: ./streammaster-${{ env.GitVersion_SemVer }}.zip
           asset_name: streammaster-${{ env.GitVersion_SemVer }}.zip
           asset_content_type: application/zip
 
