--- a/.github/workflows/Release_Drafter.yml
+++ b/.github/workflows/Release_Drafter.yml
@@ -1,14 +1,16 @@
 name: Release Drafter
 
 on:
+  workflow_dispatch:
+
   push:
     tags:
       - "v*"
 
     # branches to consider in the event; optional, defaults to all
-    branches:
-      - main
-  # pull_request event is required only for autolabeler
+  #   branches:
+  #     - main
+  # # pull_request event is required only for autolabeler
   # pull_request:
   #   # Only following types are handled by the action, but one can default to all as well
   #   types: [opened, reopened, synchronize]
