Continuing Security and network improvements

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,4 @@ MigrationBackup/
 StreamMasterAPI/wwwroot/initialize.js
 StreamMasterAPI/wwwroot/initialize.js
 /StreamMasterAPI/wwwroot/initialize.js
+/StreamMasterAPI/devwwwroot
