Continuing Security and network improvements

--- a/StreamMasterAPI/StreamMasterAPI.csproj
+++ b/StreamMasterAPI/StreamMasterAPI.csproj
@@ -23,10 +23,6 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="NSwag.AspNetCore" Version="13.19.0" />
-    <PackageReference Include="NSwag.MSBuild" Version="13.19.0">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StreamMasterApplication\StreamMasterApplication.csproj" />
@@ -34,5 +30,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Models\" />
+    <Folder Include="devwwwroot\" />
   </ItemGroup>
 </Project>
