--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -42,6 +42,7 @@ jobs:
           tags: |
             latest
             ${{ env.GitVersion_SemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
@@ -150,6 +151,7 @@ jobs:
           tags: |
             latest
             ${{ env.GitVersion_SemVer }}
+            ${{ env.GitVersion_SemVer }}-${{ env.GitVersion_BuildMetaDataPadded }}
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
