--- a/.github/workflows/Publish_Docker_Test.yml
+++ b/.github/workflows/Publish_Docker_Test.yml
@@ -34,6 +34,9 @@ jobs:
         with:
           useConfigFile: true
 
+      - name: Update Assembly Info
+        run: GitVersion.exe /updateassemblyinfo AssemblyInfo.cs /ensureassemblyinfo
+
       - name: Docker meta
         id: meta
         uses: docker/metadata-action@v4
@@ -98,7 +101,7 @@ jobs:
           useConfigFile: true
 
       - name: Update Assembly Info
-        run: dotnet-gitversion.exe /updateassemblyinfo AssemblyInfo.cs /ensureassemblyinfo
+        run: GitVersion.exe /updateassemblyinfo AssemblyInfo.cs /ensureassemblyinfo
 
       - name: Download digests
         uses: actions/download-artifact@v3
