Build Fix Add ability to change what M3U fields are included

--- a/.github/workflows/Publish_Docker_Test.yml
+++ b/.github/workflows/Publish_Docker_Test.yml
@@ -35,6 +35,7 @@ jobs:
           useConfigFile: true
           updateAssemblyInfo: true
           updateAssemblyInfoFilename: true
+          targetPath: StreamMasterAPI
 
       - name: Docker meta
         id: meta
