--- a/StreamMaster.Api.V1/StreamMaster.Api.V1.csproj
+++ b/StreamMaster.Api.V1/StreamMaster.Api.V1.csproj
@@ -1,9 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\StreamMasterInfrastructure\StreamMasterInfrastructure.csproj" />
+  </ItemGroup>
 
 </Project>
