--- a/.github/workflows/Publish_Docker_Test.yml
+++ b/.github/workflows/Publish_Docker_Test.yml
@@ -99,7 +99,7 @@ jobs:
         with:
           useConfigFile: true
           updateAssemblyInfo: true
-          updateAssemblyInfoFilename: true
+          targetPath: StreamMasterAPI
 
       - name: Download digests
         uses: actions/download-artifact@v3
