API Cleanup Versioning update

--- a/StreamMasterAPI/StreamMasterAPI.csproj
+++ b/StreamMasterAPI/StreamMasterAPI.csproj
@@ -54,6 +54,7 @@
     <ProjectReference Include="..\StreamMasterInfrastructure\StreamMasterInfrastructure.csproj" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Common\" />
     <Folder Include="Models\" />
     <Folder Include="devwwwroot\" />
   </ItemGroup>
