--- a/.github/workflows/Manual_Publish_Docker.yml
+++ b/.github/workflows/Manual_Publish_Docker.yml
@@ -33,6 +33,8 @@ jobs:
         uses: gittools/actions/gitversion/execute@v0
         with:
           useConfigFile: true
+          updateAssemblyInfo: true
+          targetPath: StreamMasterAPI
 
       - name: Docker meta
         id: meta
@@ -98,6 +100,8 @@ jobs:
         uses: gittools/actions/gitversion/execute@v0
         with:
           useConfigFile: true
+          updateAssemblyInfo: true
+          targetPath: StreamMasterAPI
 
       - name: Download digests
         uses: actions/download-artifact@v3
