--- a/.github/workflows/Create_Release_And_Publish.yml
+++ b/.github/workflows/Create_Release_And_Publish.yml
@@ -34,6 +34,8 @@ jobs:
         uses: gittools/actions/gitversion/execute@v0
         with:
           useConfigFile: true
+          updateAssemblyInfo: true
+          targetPath: StreamMasterAPI
 
       - name: Install dependencies
         run: |
