Added in client agent for streaming

--- a/StreamMaster.SchedulesDirect/StreamMaster.SchedulesDirect.csproj
+++ b/StreamMaster.SchedulesDirect/StreamMaster.SchedulesDirect.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="System.Text.Json" Version="7.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StreamMasterDomain\StreamMasterDomain.csproj" />
+  </ItemGroup>
+
 </Project>
