--- a/StreamMaster.M3U8/StreamMaster.M3U8.csproj
+++ b/StreamMaster.M3U8/StreamMaster.M3U8.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\StreamMasterDomain\StreamMasterDomain.csproj" />
+  </ItemGroup>
+
 </Project>
