--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -14,15 +14,16 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.5",
     "@microsoft/signalr": "^7.0.7",
-    "@microsoft/signalr-protocol-msgpack": "^7.0.5",
-    "@mui/icons-material": "^5.11.16",
-    "@mui/material": "^5.13.6",
+    "@microsoft/signalr-protocol-msgpack": "^7.0.7",
+    "@mui/icons-material": "^5.13.7",
+    "@mui/material": "^5.13.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^18.16.18",
+    "@types/node": "^18.16.19",
     "@types/react-dom": "^18.2.6",
     "@types/react-redux": "^7.1.25",
     "@vidstack/react": "^0.6.13",
@@ -33,6 +34,7 @@
     "history": "^5.3.0",
     "hls.js": "^1.4.7",
     "import": "^0.0.6",
+    "material-react-table": "^1.14.0",
     "normalize.css": "^8.0.1",
     "planby": "^1.1.4",
     "postcss-svgo": "^5.1.0",
