Various UI fixes

--- a/.gitignore
+++ b/.gitignore
@@ -352,3 +352,4 @@ StreamMasterAPI/wwwroot/initialize.js
 StreamMasterAPI/wwwroot/initialize.js
 /StreamMasterAPI/wwwroot/initialize.js
 /StreamMasterAPI/devwwwroot
+/StreamMasterAPI/wwwroot
