--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -46,6 +46,7 @@
     "react-dom": "^18.2.0",
     "react-intl": "^6.4.4",
     "react-lazy-load-image-component": "^1.6.0",
+    "react-player": "^2.12.0",
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
@@ -68,6 +69,7 @@
     "@types/react": "^18.2.14",
     "@types/react-lazy-load-image-component": "^1.5.3",
     "@types/uuid": "^9.0.2",
+    "@types/video-react": "^0.15.1",
     "@typescript-eslint/parser": "^5.59.8",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^8.8.0",
@@ -90,7 +92,7 @@
   "scripts": {
     "babel-extract-messages": "NODE_ENV=production babel src --out-dir build --plugins=babel-plugin-react-intl",
     "build": "react-scripts build",
-    "buildAndCopy": "react-scripts build && cp --force -R build/* ../StreamMasterAPI/wwwroot/",
+    "buildAndCopy": "react-scripts build && cp -R build/* ../StreamMasterAPI/wwwroot/ -force",
     "compile": "formatjs compile",
     "eject": "react-scripts eject",
     "extract": "formatjs extract src/**/*.ts* --out-file en.json --id-interpolation-pattern [sha512:contenthash:base64:6]",
