--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -30,6 +30,7 @@
     "@vidstack/react": "^0.6.13",
     "axios": "^1.4.0",
     "babel-plugin-react-intl": "^8.2.25",
+    "chart.js": "^4.3.0",
     "eslint-config-canonical": "^40.0.9",
     "formatjs": "^0.1.1",
     "history": "^5.3.0",
@@ -54,6 +55,7 @@
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "react-xarrows": "^2.0.2",
+    "recharts": "^2.7.2",
     "redux-thunk": "^2.4.2",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.0",
