--- a/StreamMasterAPI/appsettings.json
+++ b/StreamMasterAPI/appsettings.json
@@ -1,11 +1,10 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Debug",
       "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information",
-      "Microsoft.AspNetCore.SignalR": "Debug",
-      "Microsoft.AspNetCore.Http.Connections": "Debug"
+      "StreamMasterInfrastructure": "Debug",
+      "StreamMasterInfrastructure.MiddleWare.CircularRingBuffer": "Information"
     }
   },
   "AllowedHosts": "*"
