Added in log viewer

--- a/StreamMasterAPI/appsettings.json
+++ b/StreamMasterAPI/appsettings.json
@@ -1,10 +1,12 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
+      "Default": "Information",
       "Microsoft": "Warning",
-      "StreamMasterInfrastructure": "Debug",
-      "StreamMasterInfrastructure.MiddleWare.CircularRingBuffer": "Information"
+      //"Microsoft.AspNetCore.SignalR": "Debug",
+      //"Microsoft.AspNetCore.Http.Connections": "Debug",
+      "StreamMasterInfrastructure.VideoStreamManager": "Debug",
+      "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information"
     }
   },
   "AllowedHosts": "*"
