--- a/StreamMasterDomain/StreamMasterDomain.csproj
+++ b/StreamMasterDomain/StreamMasterDomain.csproj
@@ -16,8 +16,9 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="12.0.1" />
-    <PackageReference Include="MediatR" Version="12.1.0" />
+    <PackageReference Include="MediatR" Version="12.1.1" />
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Features" Version="7.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Features" Version="7.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
   </ItemGroup>
 </Project>
