--- a/.gitignore
+++ b/.gitignore
@@ -353,3 +353,4 @@ StreamMasterAPI/wwwroot/initialize.js
 /StreamMasterAPI/wwwroot/initialize.js
 /StreamMasterAPI/devwwwroot
 /StreamMasterAPI/wwwroot
+/StreamMasterAPI/sd_token.json
