XML Fixes Lots of API improvements

--- a/StreamMasterAPI/appsettings.json
+++ b/StreamMasterAPI/appsettings.json
@@ -5,6 +5,8 @@
       "Microsoft": "Warning",
       //"Microsoft.AspNetCore.SignalR": "Debug",
       //"Microsoft.AspNetCore.Http.Connections": "Debug",
+      "Microsoft.AspNetCore.Mvc.Formatters": "Debug",
+      "System.Xml.Serialization": "Debug",
       "StreamMasterInfrastructure.VideoStreamManager": "Debug",
       "StreamMasterInfrastructure.VideoStreamManager.CircularRingBuffer": "Information"
     }
