--- a/StreamMasterDomain/StreamMasterDomain.csproj
+++ b/StreamMasterDomain/StreamMasterDomain.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="7.0.0" />
     <PackageReference Include="Microsoft.Extensions.Features" Version="7.0.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.1" />
+    <PackageReference Include="System.Linq.Dynamic.Core" Version="1.3.4" />
     <PackageReference Include="X.PagedList.EF" Version="8.4.7" />
   </ItemGroup>
 </Project>
