--- a/StreamMasterInfrastructure.EF/StreamMasterInfrastructureEF.csproj
+++ b/StreamMasterInfrastructure.EF/StreamMasterInfrastructureEF.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EFCore.BulkExtensions.Sqlite" Version="7.1.6" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
