--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -56,6 +56,7 @@
     "react-transition-group": "^4.4.5",
     "react-xarrows": "^2.0.2",
     "recharts": "^2.7.3",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
     "use-debounce": "^9.0.4",
     "uuid": "^9.0.0",
