--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -12,23 +12,22 @@
     ]
   },
   "dependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
     "@microsoft/signalr": "^7.0.10",
     "@microsoft/signalr-protocol-msgpack": "^7.0.10",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
+    "@mui/icons-material": "^5.14.7",
+    "@mui/material": "^5.14.7",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@types/node": "^18.17.6",
+    "@types/node": "^18.17.14",
     "@types/react-dom": "^18.2.7",
-    "@types/react-redux": "^7.1.25",
+    "@types/react-redux": "^7.1.26",
     "@vidstack/react": "^0.6.13",
-    "axios": "^1.4.0",
+    "axios": "^1.5.0",
     "babel-plugin-react-intl": "^8.2.25",
     "chart.js": "^4.3.3",
     "eslint-config-canonical": "^40.0.9",
@@ -52,7 +51,7 @@
     "react-pro-sidebar": "^1.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.5",
     "react-xarrows": "^2.0.2",
     "recharts": "^2.7.3",
@@ -65,20 +64,21 @@
     "web-vitals": "^3.4.0"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@babel/preset-react": "^7.22.5",
     "@babel/preset-typescript": "^7.22.5",
     "@formatjs/cli": "^6.1.3",
     "@rtk-query/codegen-openapi": "^1.0.0",
     "@svgr/webpack": "^6.5.1",
-    "@types/react": "^18.2.20",
+    "@types/react": "^18.2.21",
     "@types/react-lazy-load-image-component": "^1.5.3",
-    "@types/uuid": "^9.0.2",
+    "@types/uuid": "^9.0.3",
     "@types/video-react": "^0.15.1",
     "@typescript-eslint/parser": "^5.62.0",
-    "eslint": "^8.47.0",
+    "eslint": "^8.48.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-config-react-app": "^7.0.1",
-    "eslint-plugin-canonical": "^4.9.0",
+    "eslint-plugin-canonical": "^4.9.6",
     "eslint-plugin-jest-dom": "^4.0.3",
     "extract-react-intl-messages": "^4.1.1",
     "simplejson": "^0.0.2",
