--- a/StreamMasterInfrastructure.EF/StreamMasterInfrastructureEF.csproj
+++ b/StreamMasterInfrastructure.EF/StreamMasterInfrastructureEF.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="EFCore.BulkExtensions.Sqlite" Version="7.1.6" />
+    <PackageReference Include="Hangfire.Core" Version="1.8.5" />
     <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="7.0.10" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.10">
       <PrivateAssets>all</PrivateAssets>
