optimized epg creation fixed skip error

--- a/StreamMasterInfrastructure.EF/StreamMasterInfrastructureEF.csproj
+++ b/StreamMasterInfrastructure.EF/StreamMasterInfrastructureEF.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\StreamMasterApplication\StreamMasterApplication.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Extensions\" />
+  </ItemGroup>
+
 </Project>
