--- a/StreamMasterAPI/appsettings.json
+++ b/StreamMasterAPI/appsettings.json
@@ -3,7 +3,7 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
-      "Microsoft.AspNetCore.SignalR": "Debug",
+      //"Microsoft.AspNetCore.SignalR": "Debug",
       //"Microsoft.AspNetCore.Http.Connections": "Debug",
       "Microsoft.AspNetCore.Mvc.Formatters": "Debug",
       "System.Xml.Serialization": "Debug",
