--- a/streammasterwebui/.vscode/launch.json
+++ b/streammasterwebui/.vscode/launch.json
@@ -5,7 +5,7 @@
       "command": "npm start",
       "name": "Run npm start",
       "request": "launch",
-      "type": "node-terminal"
+      "type": "node-terminal",
     },
     {
       "command": "serve -s build",
@@ -14,26 +14,17 @@
       "type": "node-terminal"
     },
     {
-      "type": "msedge",
-      // "runtimeArgs": ["--auto-open-devtools-for-tabs"],
-      "request": "launch",
-      "name": "Launch Edge",
-      "url": "http://localhost:3000",
-      "webRoot": "${workspaceFolder}",
-      "preLaunchTask": "Sleepdelay"
+    "type": "msedge",
+    // "runtimeArgs": ["--auto-open-devtools-for-tabs"],
+    "request": "launch",
+    "name": "Launch Edge",
+    "url": "http://localhost:3000",
+      "webRoot": "${workspaceFolder}/src",
+    "sourceMaps": true,
+    "sourceMapPathOverrides": {
+      "webpack:///./src/*": "${webRoot}/*"
     },
-    {
-      "name": "Docker: Attach to Node",
-      "type": "node",
-      "request": "attach",
-      "port": 9229,
-      "address": "localhost",
-      "localRoot": "${workspaceFolder}",
-      "remoteRoot": "/usr/src/app",
-      "skipFiles": [
-        "${workspaceFolder}/node_modules/**/*.js",
-        "<node_internals>/**/*.js"
-      ]
+    "preLaunchTask": "Sleepdelay"
     },
     {
       "name": "Docker Node.js Launch",
