--- a/streammasterwebui/package.json
+++ b/streammasterwebui/package.json
@@ -81,7 +81,6 @@
     "eslint-plugin-canonical": "^4.9.6",
     "eslint-plugin-jest-dom": "^4.0.3",
     "extract-react-intl-messages": "^4.1.1",
-    "react-scripts": "^5.0.1",
     "simplejson": "^0.0.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
@@ -96,17 +95,17 @@
   "private": true,
   "scripts": {
     "babel-extract-messages": "NODE_ENV=production babel src --out-dir build --plugins=babel-plugin-react-intl",
-    "build": "react-scripts build",
-    "buildAndCopy": "react-scripts build && cp -R build/* ../StreamMasterAPI/wwwroot/ -force",
+    "build": "npm build",
+    "buildAndCopy": "npm build && cp -R build/* ../StreamMasterAPI/wwwroot/ -force",
     "compile": "formatjs compile",
-    "eject": "react-scripts eject",
+    "eject": "npm eject",
     "extract": "formatjs extract src/**/*.ts* --out-file en.json --id-interpolation-pattern [sha512:contenthash:base64:6]",
     "extract1": "formatjs extract \"src/**/*.ts*\" --ignore='**/*.d.ts' --out-file en.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'",
     "extract2": "formatjs extract",
     "i18n": "extract-messages -l=en -o src/lang -d en \"src/**/*.ts*\"",
     "lint": "eslint ./src/**/*.ts ./src/**/*.tsx",
-    "start": "react-scripts start",
-    "test": "react-scripts test"
+    "start": "npm start",
+    "test": "npm test"
   },
   "version": "0.1.0"
 }
