playlist editor updates

--- a/streammasterwebui/.eslintrc.json
+++ b/streammasterwebui/.eslintrc.json
@@ -39,7 +39,7 @@
       "asc",
       {
         "caseSensitive": false,
-        "natural": true
+        "natural": false
       }
     ],
     "padding-line-between-statements": [
