--- a/streammasterwebui/.vscode/launch.json
+++ b/streammasterwebui/.vscode/launch.json
@@ -41,7 +41,7 @@
     // "sourceMapPathOverrides": {
     //   "webpack:///./src/*": "${webRoot}/*"
     // },
-    "preLaunchTask": "Sleepdelay"
+    "preLaunchTask": "watcher"
     },
     {
       "name": "Docker Node.js Launch",
