--- a/streammasterwebui/.vscode/tasks.json
+++ b/streammasterwebui/.vscode/tasks.json
@@ -2,6 +2,17 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?LinkId=733558
   "version": "2.0.0",
   "tasks": [
+     {
+      "label": "watcher",
+      "type": "npm",
+      "script": "watch",
+      "problemMatcher": "$tsc-watch",
+      "isBackground": true,
+      "presentation": {
+        "reveal": "always",
+        "revealProblems": "onProblem"
+      }
+    },
     {
       "type": "npm",
       "script": "start",
